Revert "Scrollbar fix, alleged."
This reverts commit 5df1c698ddf296528afe98f834036356b6a92a27.

--- a/chrollusion.safariextension/chrome/style/index.css
+++ b/chrollusion.safariextension/chrome/style/index.css
@@ -55,11 +55,7 @@ html, body {
   padding: 0;
   background-color: white;
   color: #666666;
-  height: 594px;
-}
-
-.update {
-  overflow: hidden;
+  height: 600px;
 }
 
 a {
@@ -252,11 +248,6 @@ html.deployment-production #deployment-info {
   background: -webkit-linear-gradient(white, #fe8);
   padding: 10px 5px;
   width: 788px;
-}
-
-#update.safari {
-  margin-left: 5px;
-  width: 778px;
 }
 
 .chrome, .safari {
